--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
     </p>
 </div>
 <script>
-  parent?.postMessage({ platoHeight: document.querySelector('.alert').scrollHeight }, '*');
-  setInterval(() => {
-    parent?.postMessage({ platoHeight: document.querySelector('.alert').scrollHeight }, '*')
-  }, 5000);
+
+  function sendHeight() {
+    parent?.postMessage({ platoHeight: document.querySelector('.alert')?.scrollHeight || 0 }, '*');
+  }
+
+  sendHeight();
+  setInterval(() => sendHeight(), 5000);
 </script>
 </body>
 </html>
