feat: add expire feat

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body >
-<div class="alert" data-expire="22.02.2025">
+<div class="alert" data-expire="22-02-2025">
     <p class="alert-title">
         Изменение в работе скалодрома
     </p>
@@ -14,8 +14,8 @@
         Четверг 07.07 работаем до 16:00 <br/>
         Пятница - зал закрыт <br/>
         В субботу проходят <a
-            href="https://docs.google.com/forms/d/e/1FAIpQLSe2hMTmwpIPhjuEwyVKIHY-ujo_moNF0pS029_xngM2xWgdVg/viewform"
-            target="_blank">соревнования "BOULDER COMBAT"</a><br/>
+            href="https://docs.google.com/"
+            target="_blank">соревнования</a><br/>
         Воскресенье - открыты с 12:00
     </p>
 </div>
