--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body >
-<div class="alert" data-expire="2025-02-22">
+<div class="alert" data-expire="2025-03-05">
     <p class="alert-title">
         Изменение в работе скалодрома
     </p>
     <p class="alert-description">
-        Четверг 07.07 работаем до 16:00 <br/>
-        Пятница - зал закрыт <br/>
-        В субботу проходят <a
-            href="https://docs.google.com/"
-            target="_blank">соревнования</a><br/>
-        Воскресенье - открыты с 12:00
+        4 марта скалодром работает с 15:00 <br/>
     </p>
 </div>
 <script>
