--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body >
-<div class="alert" data-expire="2025-03-05">
+<div class="alert" data-expire="2025-04-14">
     <p class="alert-title">
         Изменение в работе скалодрома
     </p>
     <p class="alert-description">
-        4 марта скалодром работает с 15:00 <br/>
+        11 апреля скалодром не работает, <br/>
+        12-13 апреля проходит этап кубка Беларуси по скалолазанию 
     </p>
 </div>
 <script>
