--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 <body >
 <div class="alert" data-expire="2025-04-14">
     <p class="alert-title">
-        Изменение в работе скалодрома
+        Изменения в работе скалодрома
     </p>
     <p class="alert-description">
-        11 апреля скалодром не работает, <br/>
-        12-13 апреля проходит этап кубка Беларуси по скалолазанию 
+        10 апреля зал работает до 16:00, 11 апреля скалодром не работает, <br/>
+        12-13 апреля проходит этап кубка Беларуси по скалолазанию, <br/> 
+        приходите болеть, за чаем и кофе.
     </p>
 </div>
 <script>
