--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body >
-<div class="alert" data-expire="2025-04-14">
+<div class="alert" data-expire="2025-09-29">
     <p class="alert-title">
         Изменения в работе скалодрома
     </p>
     <p class="alert-description">
-        10 апреля зал работает до 16:00, 11 апреля скалодром не работает, <br/>
-        12-13 апреля проходит этап кубка Беларуси по скалолазанию, <br/> 
-        приходите болеть, за чаем и кофе.
+        26 сентября скалодром не работает, <br/>
+        27-28 апреля проходит этап кубка Беларуси по скалолазанию, <br/> 
+        приходите поболеть за спортсменов.
     </p>
 </div>
 <script>
