--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </p>
     <p class="alert-description">
         26 сентября скалодром не работает, <br/>
-        27-28 апреля проходит этап кубка Беларуси по скалолазанию, <br/> 
+        27-28 апреля проходит Чемпионат Беларуси по скалолазанию, <br/> 
         приходите поболеть за спортсменов.
     </p>
 </div>
